Revert "first commit"
This reverts commit 0f454a4e8142ec4145dd8ae002de0e1cd926bf52.

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,6 @@
     "import/prefer-default-export": 0,
     "no-console": 0,
     "array-callback-return": 0,
-    "consistent-return": 0,
-    "no-useless-escape": 0
+    "consistent-return": 0
   }
 }
